kubernetes/apps/notifiarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notifications
  labels:
    app.kubernetes.io/name: notifiarr
    app.kubernetes.io/part-of: homelab
